# codeblue-analytics

./: .gitignore  ARCHITECTURE.md  README.md  RUNBOOK.md  pyproject.toml
environments/codeblue-analytics/: README.md  codeblue_analytics.py  pyproject.toml
environments/codeblue-analytics/.prime/: .env-metadata.json
environments/codeblue-analytics/configs/splits/: bank_eval.yaml  dev.yaml  eval.yaml  loan_dev.yaml  loan_eval.yaml  loan_validated.yaml  road_eval.yaml  shopping_eval.yaml
environments/codeblue-analytics/data/datasets/: registry.yaml
environments/codeblue-analytics/data/questions/: registry.yaml
environments/codeblue-analytics/data/questions/bank/: v1_validated.jsonl  v2_hard.jsonl
environments/codeblue-analytics/data/questions/heart/: v1_basic.jsonl
environments/codeblue-analytics/data/questions/loan/: v1_mined.jsonl  v1_validated.jsonl
environments/codeblue-analytics/data/questions/road/: v1_validated.jsonl
environments/codeblue-analytics/data/questions/shopping/: filtered.jsonl  v1_basic.jsonl  v1_validated.jsonl  v2_validated.jsonl
results/: gemini_3_pro_preview_eval.json
results/bank_v2_hard/: deepseek_deepseek-chat.json  google_gemini-2.5-flash.json  gpt-5.1.json  prime-intellect_intellect-3.json  qwen_qwen-2.5-72b-instruct.json  (+1 more)
scripts/: analyze_by_level.py  analyze_failures.py  calculate_tokens.py  debug_models.py  dim_analysis.py  dim_analysis2.py  eval_runner.py  list_openai_models.py  list_prime_models.py  migrate_legacy_results.py  rank_questions.py  rerun_failed.py  run_benchmark_suite.py  summarize_results.py
(+5 files in other folders)
