[project]
name = "pandas-rlvr-dev"
version = "0.1.0"
description = "Development workspace for pandas-analysis RLVR environment"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    {name = "Vadith", email = "vadith@example.com"}
]

dependencies = [
    "verifiers>=0.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "datasets>=2.14.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "pytest>=7.0.0",
    "tabulate>=0.9.0",  # For DataFrame.to_markdown()
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
]
